Date format is YYYYMMDD

History:
--------


Version 1.0 :  1998.02.17
    First release (Roche)


Version 1.1 :  1998.02.18
    Reading/writing  to  stdin/stdout  under  MS-DOS didn't work correctly.
    Fixed. (Roche)


Version 1.2 :  1998.03.01
    Corrected  a  small  and  harmless  bug.  When using the z command, the
temporary  file  name was saved in the gzip compressed file.  So if someone
tried to unpack it with gzip with the -N option, gzip would generate a file
with a very strange name.  Fixed. (Roche)


Version 1.3 : 1999.03.24
    Fixed  a  major bug in the decompression functions that caused complete
failure with some DMS files, mostly generated by old versions of DMS.  Made
some  other minor changes.  Changed the Makefile to strip debug information
from the executable. (Roche)


Version 1.3.1 : 2004.09.02
    Moved to C99 type definitions (#include <stdint.h>). Replaced tmpnam()
    with mkstemp(). Fixed print formatters. Fixed ambiguous C language
    constructs. Added a simple configure script for consistent compilation
    and installation. (Heikki Orsila <heikki.orsila@iki.fi>)

No Version : 2004-09-10
    Fixed file permissions for documentation directory.
    (Heikki Orsila <heikki.orsila@iki.fi>)

Version 1.3.2 : 2006-06-25
    Added -f option to override errors in unpacked data. It can be useful for
    desperate data salvation. Please send me corrupted dms images for
    further analysis to improve xdms. (Heikki Orsila <heikki.orsila@iki.fi>)

No version : 2006-06-25
    Added a broken support for operating systems without mkstemp() (bad, bad!).
    To compile on such a system, read xdms.txt. After ./configure you must
    edit src/xdmsconfig.h and then you can issue 'make'.
    (Heikki Orsila <heikki.orsila@iki.fi>)
